Move persistence related methods
-created new method in inventory persistence service for getting module
references

Issue-ID: CPS-1117
Signed-off-by: emaclee <lee.anjella.macabuhay@est.tech>
Change-Id: Ic1f3c180a62a7211e19982d8f3570829db58370e